src/test/deca/syntax/valid/synt/moitie.deca
// Description:
//    tests de programme syntaxiquement correct.
//
// Resultats:
//    ok
//
// Historique:
//    cree le 04/01/2023
//
{
    int x ;
    x=readInt() ;
    println(0.5*(x*x)) ;
}